# react-tauri

./: LICENSE  Makefile  README.md  package-lock.json  package.json
src/: App.css  App.js  App.tsx  index.js  myFile.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/action_components/: cload_file.tsx  delete_file.tsx  rename_file.tsx
src/apps/autodox2/: README.md  package-lock.json  package.json  tsconfig.json
src/apps/autodox2/public/: index.html
src/apps/autodox2/src/: App.css  App.test.tsx  App.tsx  RichTextEditor.tsx  index.tsx  initialValue.tsx
src/apps/autodox2/src/Functions/: setNode.tsx
src/apps/autodox2/src/config/: config.ts  mentionables.ts  plugins.ts
src/apps/autodox2/src/config/autoformat/: autoformatBlocks.ts  autoformatUtils.ts
src/apps/autodox2/src/config/components/: DragHandle.tsx  Menu.tsx  Toolbars.tsx  components.tsx  withStyledDraggables.tsx  withStyledPlaceHolders.ts
src/apps/autodox2/src/config/components/code/: code.tsx  codeE.tsx
src/apps/autodox2/src/config/components/editable_void/: editableViod.tsx  editableVoidE.tsx
src/apps/autodox2/src/config/components/mention/: mention.tsx  numberedE.tsx
src/apps/autodox2/src/config/components/numbered/: numbered.tsx  numberedE.tsx
src/components/: CutomInput.tsx  Menu.tsx  Popover.tsx  breadCrumbs.tsx  color_pallet.tsx  side_nav.tsx  tool_tip.tsx
src/main_components/: AppWithDrawer.tsx  bar_buttons.tsx  drawerItems.tsx
src/stores/: index.ts  ui_stores.ts
src/tauri_actions/: createFile.ts  deleteFile.ts  getFiles.ts  readFile.ts
